# farebox

./: .gitignore  Cargo.toml  README.md  sample_request.json  shell.nix
farebox/: Cargo.toml  README.md
farebox/src/: dmfr.rs
solari/: Cargo.toml  sample_request.json
solari-export-graph/: Cargo.toml
solari-export-graph/src/: main.rs
solari-geomath/: Cargo.toml
solari-geomath/src/: lib.rs
solari-spatial/: Cargo.toml
solari-spatial/src/: lib.rs
solari-transfers/: Cargo.toml
solari-transfers/src/: lib.rs
solari-transfers/src/valinor/: edge_export.rs  mod.rs
solari-transfers/src/valinor/export_edges/: NOTICE  VALINOR_LICENSE  edge_export.rs  edge_models.rs
solari/src/: lib.rs  route.rs  spatial.rs
solari/src/api/: mod.rs  request.rs  response.rs
solari/src/raptor/: geomath.rs  mod.rs
solari/src/raptor/timetable/: in_memory.rs  mmap.rs  mod.rs
solari/src/valhalla/: mod.rs
src/: lib.rs  route.rs
src/api/: mod.rs  request.rs  response.rs
src/raptor/: geomath.rs  mod.rs
src/raptor/timetable/: in_memory.rs  mmap.rs  mod.rs
src/valhalla/: mod.rs
