[package]
name = "solari-transfers"
version = "0.1.0"
edition = "2024"

[dependencies]
solari-geomath = { path = "../solari-geomath" }
solari-spatial = { path = "../solari-spatial" }

valhalla-graphtile = { git = "https://github.com/stadiamaps/valinor", rev = "8e34e84", features = ["serde"] }
fast_paths = { git = "https://github.com/ellenhp/fast_paths", rev = "8159117", features = ["rkyv"] }
bit-set = "0.8.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
geo-types = "0.7"
geo = "0.29"
rkyv = "0.8.10"
log = "0.4"
